Added Particle Filter Skeleton

--- a/ConfigurationFile.ini
+++ b/ConfigurationFile.ini
@@ -1,2 +1,16 @@
 [Details]
 graph1 = [(1,2),(2,3)]
+graph2 = [(1,2),(3,2),(4,2),(2,6),(5,6),(6,7),(9,8),(10,8),(8,7),(8,11),(11,13),(12,13),(13,14),(7,14),(15,14)]
+graph3 = [(Future_Market_Price,Future_Market_Movement),(Open_Interest,Future_Market_Movement)]
+[GraphDetails]
+nodecount = 3
+timeslice = 3
+nodeconnections = [(1,2),(2,3)]
+internodeconnections = [(2,2),(3,3)]
+[ParticleFilter]
+RunAlgorithm = False
+NumberOfSample = 30
+transitionmodel = {}
+sensormodel = {}
+priorprobability = {}
+
